--- a/charts/deployment/templates/secrets.yaml
+++ b/charts/deployment/templates/secrets.yaml
@@ -1,10 +1,11 @@
 {{- if and .Values.ExternalSecret.enabled (eq .Values.ExternalSecret.type "hashicorp") }}
-apiVersion: external-secrets.io/v1alpha1
+apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: {{ include "deployment.fullname" . }}
+  namespace: {{ .Release.Namespace }}
 spec:
-  refreshInterval: "15s"
+  refreshInterval: 15s
   secretStoreRef:
     name: {{ .Values.ExternalSecret.name }}
     kind: SecretStore
@@ -14,9 +15,10 @@ spec:
     deletionPolicy: Retain
   dataFrom:
 {{- range .Values.ExternalSecret.kvPath }}
-  - key: {{ . }}
-    metadataPolicy: None
-    decodingStrategy: None
-    conversionStrategy: Default
+    - extract:
+        key: {{ . }}
+        metadataPolicy: None
+        decodingStrategy: None
+        conversionStrategy: Default
 {{- end }}
 {{- end }}
