--- a/charts/deployment/Chart.yaml
+++ b/charts/deployment/Chart.yaml
@@ -1,6 +1,57 @@
 apiVersion: v2
 name: deployment
-description: shiftlabsdev template
+description: Production-ready Helm chart for Kubernetes deployments with modern best practices, security hardening, and comprehensive health checks
 type: application
-version: 1.0.3
+version: 2.0.0
 appVersion: "1.0.0"
+keywords:
+  - kubernetes
+  - deployment
+  - shiftlabs
+  - helm
+  - production
+  - best-practices
+  - microservices
+home: https://github.com/shiftlabs/helm-library
+sources:
+  - https://github.com/shiftlabs/helm-library
+icon: https://raw.githubusercontent.com/kubernetes/kubernetes/master/logo/logo.svg
+maintainers:
+  - name: ShiftLabs Team
+    email: core@shiftlabs.dev
+    url: https://shiftlabs.dev
+annotations:
+  artifacthub.io/category: integration-delivery
+  artifacthub.io/license: Apache-2.0
+  artifacthub.io/prerelease: "false"
+  artifacthub.io/signKey: |
+    fingerprint: # Your GPG key fingerprint
+    url: # Your public key URL
+  artifacthub.io/changes: |
+    - kind: added
+      description: Modern probe configuration with startup, liveness, readiness
+    - kind: added
+      description: Advanced ingress with security headers, CORS, rate limiting
+    - kind: added
+      description: Multi-provider ExternalSecret support (Vault, AWS, GCP, Azure)
+    - kind: added
+      description: PodDisruptionBudget and NetworkPolicy templates
+    - kind: changed
+      description: Removed legacy http/tcp probe configuration
+    - kind: changed
+      description: Security context hardening with best practices
+    - kind: changed
+      description: Resource QoS optimization (Guaranteed)
+    - kind: fixed
+      description: Service loadBalancerIP conditional rendering
+    - kind: fixed
+      description: ConfigMap volume mount path corrections
+  artifacthub.io/links: |
+    - name: Documentation
+      url: https://github.com/shiftlabs/helm-library/blob/main/charts/deployment/README.md
+    - name: Source Code
+      url: https://github.com/shiftlabs/helm-library
+  artifacthub.io/containsSecurityUpdates: "true"
+  artifacthub.io/recommendations: |
+    - url: https://artifacthub.io/packages/helm/prometheus-community/kube-prometheus-stack
+    - url: https://artifacthub.io/packages/helm/external-secrets-operator/external-secrets
