--- a/charts/deployment/templates/configmap.yaml
+++ b/charts/deployment/templates/configmap.yaml
@@ -3,6 +3,8 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ include "deployment.fullname" . }}
+  labels:
+    {{- include "deployment.labels" . | nindent 4 }}
 data:
   {{- range .Values.configmap.fileData }}
   {{ .fileName }}: {{ .content | quote }}
