--- a/charts/deployment/templates/ingress-grpc.yaml
+++ b/charts/deployment/templates/ingress-grpc.yaml
@@ -1,12 +1,6 @@
-{{- if .Values.enabled }}
 {{- if .Values.ingressGRPC.enabled -}}
 {{- $fullName := include "deployment.fullname" . -}}
 {{- $svcPort := index .Values.service.ports 0 -}}
-{{- if and .Values.ingressGRPC.className (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) }}
-  {{- if not (hasKey .Values.ingressGRPC.annotations "kubernetes.io/ingress.class") }}
-  {{- $_ := set .Values.ingressGRPC.annotations "kubernetes.io/ingress.class" .Values.ingressGRPC.className}}
-  {{- end }}
-{{- end }}
 {{- if semverCompare ">=1.19-0" .Capabilities.KubeVersion.GitVersion -}}
 apiVersion: networking.k8s.io/v1
 {{- else if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
@@ -19,10 +13,85 @@ metadata:
   name: {{ $fullName }}-grpc
   labels:
     {{- include "deployment.labels" . | nindent 4 }}
-  {{- with .Values.ingressGRPC.annotations }}
-  annotations:
+    {{- with .Values.ingressGRPC.extraLabels }}
     {{- toYaml . | nindent 4 }}
-  {{- end }}
+    {{- end }}
+  annotations:
+    # GRPC Backend Protocol
+    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
+    {{- if .Values.ingressGRPC.ssl.redirect }}
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    {{- end }}
+    {{- if .Values.ingressGRPC.ssl.protocols }}
+    nginx.ingress.kubernetes.io/ssl-protocols: {{ .Values.ingressGRPC.ssl.protocols | quote }}
+    {{- end }}
+    {{- if .Values.ingressGRPC.ssl.ciphers }}
+    nginx.ingress.kubernetes.io/ssl-ciphers: {{ .Values.ingressGRPC.ssl.ciphers | quote }}
+    {{- end }}
+    {{- if .Values.ingressGRPC.securityHeaders.enabled }}
+    {{- if .Values.ingressGRPC.securityHeaders.hsts }}
+    nginx.ingress.kubernetes.io/hsts: "true"
+    nginx.ingress.kubernetes.io/hsts-max-age: {{ .Values.ingressGRPC.securityHeaders.hstsMaxAge | quote }}
+    nginx.ingress.kubernetes.io/hsts-include-subdomains: {{ .Values.ingressGRPC.securityHeaders.hstsIncludeSubdomains | quote }}
+    {{- if .Values.ingressGRPC.securityHeaders.hstsPreload }}
+    nginx.ingress.kubernetes.io/hsts-preload: "true"
+    {{- end }}
+    {{- end }}
+    {{- if .Values.ingressGRPC.securityHeaders.frameOptions }}
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      more_set_headers "X-Frame-Options: {{ .Values.ingressGRPC.securityHeaders.frameOptions }}";
+      {{- if .Values.ingressGRPC.securityHeaders.contentTypeNosniff }}
+      more_set_headers "X-Content-Type-Options: nosniff";
+      {{- end }}
+      {{- if .Values.ingressGRPC.securityHeaders.xssProtection }}
+      more_set_headers "X-XSS-Protection: {{ .Values.ingressGRPC.securityHeaders.xssProtection }}";
+      {{- end }}
+      {{- if .Values.ingressGRPC.securityHeaders.referrerPolicy }}
+      more_set_headers "Referrer-Policy: {{ .Values.ingressGRPC.securityHeaders.referrerPolicy }}";
+      {{- end }}
+      {{- if .Values.ingressGRPC.securityHeaders.csp }}
+      more_set_headers "Content-Security-Policy: {{ .Values.ingressGRPC.securityHeaders.csp }}";
+      {{- end }}
+      # GRPC specific settings
+      grpc_read_timeout {{ .Values.ingressGRPC.grpc.timeout }}s;
+      grpc_send_timeout {{ .Values.ingressGRPC.grpc.timeout }}s;
+      {{- if .Values.ingressGRPC.grpc.maxMessageSize }}
+      client_max_body_size {{ .Values.ingressGRPC.grpc.maxMessageSize }};
+      {{- end }}
+    {{- end }}
+    {{- end }}
+    {{- if .Values.ingressGRPC.proxy.bodySize }}
+    nginx.ingress.kubernetes.io/proxy-body-size: {{ .Values.ingressGRPC.proxy.bodySize | quote }}
+    {{- end }}
+    {{- if .Values.ingressGRPC.proxy.connectTimeout }}
+    nginx.ingress.kubernetes.io/proxy-connect-timeout: {{ .Values.ingressGRPC.proxy.connectTimeout | quote }}
+    {{- end }}
+    {{- if .Values.ingressGRPC.proxy.sendTimeout }}
+    nginx.ingress.kubernetes.io/proxy-send-timeout: {{ .Values.ingressGRPC.proxy.sendTimeout | quote }}
+    {{- end }}
+    {{- if .Values.ingressGRPC.proxy.readTimeout }}
+    nginx.ingress.kubernetes.io/proxy-read-timeout: {{ .Values.ingressGRPC.proxy.readTimeout | quote }}
+    {{- end }}
+    {{- if .Values.ingressGRPC.proxy.bufferSize }}
+    nginx.ingress.kubernetes.io/proxy-buffer-size: {{ .Values.ingressGRPC.proxy.bufferSize | quote }}
+    {{- end }}
+    {{- if .Values.ingressGRPC.proxy.nextUpstream }}
+    nginx.ingress.kubernetes.io/proxy-next-upstream: {{ .Values.ingressGRPC.proxy.nextUpstream | quote }}
+    {{- end }}
+    {{- if .Values.ingressGRPC.proxy.nextUpstreamTries }}
+    nginx.ingress.kubernetes.io/proxy-next-upstream-tries: {{ .Values.ingressGRPC.proxy.nextUpstreamTries | quote }}
+    {{- end }}
+    {{- if .Values.ingressGRPC.rateLimit.enabled }}
+    nginx.ingress.kubernetes.io/limit-rps: {{ .Values.ingressGRPC.rateLimit.rps | quote }}
+    nginx.ingress.kubernetes.io/limit-burst-multiplier: {{ div .Values.ingressGRPC.rateLimit.burst .Values.ingressGRPC.rateLimit.rps | quote }}
+    {{- end }}
+    {{- if .Values.ingressGRPC.canary.enabled }}
+    nginx.ingress.kubernetes.io/canary: "true"
+    nginx.ingress.kubernetes.io/canary-weight: {{ .Values.ingressGRPC.canary.weight | quote }}
+    {{- end }}
+    {{- with .Values.ingressGRPC.extraAnnotations }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
 spec:
   {{- if and .Values.ingressGRPC.className (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion) }}
   ingressClassName: {{ .Values.ingressGRPC.className }}
@@ -59,5 +128,4 @@ spec:
               {{- end }}
           {{- end }}
     {{- end }}
-{{- end }}
 {{- end }}
