--- a/charts/deployment/templates/secrets.yaml
+++ b/charts/deployment/templates/secrets.yaml
@@ -1,9 +1,12 @@
-{{- if and .Values.ExternalSecret.enabled (eq .Values.ExternalSecret.type "hashicorp") }}
+{{- if .Values.ExternalSecret.enabled }}
+{{- if eq .Values.ExternalSecret.type "hashicorp" }}
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: {{ include "deployment.fullname" . }}
   namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "deployment.labels" . | nindent 4 }}
 spec:
   refreshInterval: 15s
   secretStoreRef:
@@ -20,5 +23,74 @@ spec:
         metadataPolicy: None
         decodingStrategy: None
         conversionStrategy: Default
+{{- end }}
+{{- end }}
+{{- if eq .Values.ExternalSecret.type "aws" }}
+apiVersion: external-secrets.io/v1
+kind: ExternalSecret
+metadata:
+  name: {{ include "deployment.fullname" . }}
+  namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "deployment.labels" . | nindent 4 }}
+spec:
+  refreshInterval: 15s
+  secretStoreRef:
+    name: {{ .Values.ExternalSecret.name }}
+    kind: SecretStore
+  target:
+    name: {{ include "deployment.fullname" . }}
+    creationPolicy: Owner
+    deletionPolicy: Retain
+  dataFrom:
+{{- range .Values.ExternalSecret.kvPath }}
+    - extract:
+        key: {{ . }}
+{{- end }}
+{{- end }}
+{{- if eq .Values.ExternalSecret.type "gcp" }}
+apiVersion: external-secrets.io/v1
+kind: ExternalSecret
+metadata:
+  name: {{ include "deployment.fullname" . }}
+  namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "deployment.labels" . | nindent 4 }}
+spec:
+  refreshInterval: 15s
+  secretStoreRef:
+    name: {{ .Values.ExternalSecret.name }}
+    kind: SecretStore
+  target:
+    name: {{ include "deployment.fullname" . }}
+    creationPolicy: Owner
+    deletionPolicy: Retain
+  dataFrom:
+{{- range .Values.ExternalSecret.kvPath }}
+    - extract:
+        key: {{ . }}
+{{- end }}
+{{- end }}
+{{- if eq .Values.ExternalSecret.type "azure" }}
+apiVersion: external-secrets.io/v1
+kind: ExternalSecret
+metadata:
+  name: {{ include "deployment.fullname" . }}
+  namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "deployment.labels" . | nindent 4 }}
+spec:
+  refreshInterval: 15s
+  secretStoreRef:
+    name: {{ .Values.ExternalSecret.name }}
+    kind: SecretStore
+  target:
+    name: {{ include "deployment.fullname" . }}
+    creationPolicy: Owner
+    deletionPolicy: Retain
+  dataFrom:
+{{- range .Values.ExternalSecret.kvPath }}
+    - extract:
+        key: {{ . }}
 {{- end }}
 {{- end }}
