--- a/charts/deployment/templates/service.yaml
+++ b/charts/deployment/templates/service.yaml
@@ -1,4 +1,3 @@
-{{- if .Values.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -7,14 +6,15 @@ metadata:
     {{- include "deployment.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
+  {{- if and (eq .Values.service.type "LoadBalancer") .Values.service.loadBalancerIP }}
   loadBalancerIP: {{ .Values.service.loadBalancerIP }}
+  {{- end }}
   ports:
     {{- range .Values.service.ports }}
     - port: {{ .port }}
       protocol: {{ .protocol }}
-      targetPort: {{ .port }}
+      targetPort: {{ .targetPort }}
       name: {{ .name }}
-    {{- end }}          
+    {{- end }}
   selector:
     {{- include "deployment.selectorLabels" . | nindent 4 }}
-{{- end }}
