--- a/charts/deployment/values.yaml
+++ b/charts/deployment/values.yaml
@@ -32,12 +32,12 @@ serviceAccount:
 
 podAnnotations: {}
 
-podSecurityContext:
-  runAsNonRoot: true
-  runAsUser: 1000
-  fsGroup: 1000
-  seccompProfile:
-    type: RuntimeDefault
+podSecurityContext: {}
+  # runAsNonRoot: true
+  # runAsUser: 1000
+  # fsGroup: 1000
+  # seccompProfile:
+  #   type: RuntimeDefault
 
 env: []
   # - name: ENV_VAR_NAME
@@ -48,14 +48,14 @@ env: []
   #       name: my-secret
   #       key: secret-key
 
-securityContext:
-  allowPrivilegeEscalation: false
-  readOnlyRootFilesystem: true
-  runAsNonRoot: true
-  runAsUser: 1000
-  capabilities:
-    drop:
-      - ALL
+securityContext: {}
+  # allowPrivilegeEscalation: false
+  # readOnlyRootFilesystem: true
+  # runAsNonRoot: true
+  # runAsUser: 1000
+  # capabilities:
+  #   drop:
+  #     - ALL
 
 service:
   type: ClusterIP
@@ -254,7 +254,7 @@ probes:
 
     # HTTP probe configuration
     http:
-      path: /healthz/startup
+      path: /api/v1/health/healthz
       port: http  # Can be port name or number
       scheme: HTTP
       httpHeaders: []
@@ -290,7 +290,7 @@ probes:
     type: http
 
     http:
-      path: /healthz/live
+      path: /api/v1/health/readyz
       port: http
       scheme: HTTP
       httpHeaders: []
@@ -319,7 +319,7 @@ probes:
     type: http
 
     http:
-      path: /healthz/ready
+      path: /api/v1/health/readyz
       port: http
       scheme: HTTP
       httpHeaders: []
