fix: Add service.yaml template to CronJob chart (disabled by default)
GitOps tools may require service.yaml for chart discovery.
Added optional service template that is disabled by default.
Can be enabled for metrics or health endpoints if needed.

Version bumped to 1.2.4

--- a/charts/cronjob/values.yaml
+++ b/charts/cronjob/values.yaml
@@ -55,6 +55,18 @@ securityContext: {}
   #   drop:
   #     - ALL
 
+# Service configuration (optional, usually not needed for CronJobs)
+# Only enable if you need to expose metrics or health endpoints
+service:
+  enabled: false
+  type: ClusterIP
+  loadBalancerIP: ""
+  ports:
+    - port: 8080
+      targetPort: 8080
+      name: metrics
+      protocol: TCP
+
 # CronJob specific configuration
 cronjob:
   # Cron schedule (required)
