--- a/charts/deployment/templates/ingress-http.yaml
+++ b/charts/deployment/templates/ingress-http.yaml
@@ -124,12 +124,12 @@ spec:
             backend:
               {{- if semverCompare ">=1.19-0" $.Capabilities.KubeVersion.GitVersion }}
               service:
-                name: {{ $fullName }}
+                name: {{ .backend.service.name | default $fullName }}
                 port:
-                  number: {{ $svcPort.port }}
+                  number: {{ .backend.service.port.number | default $svcPort.port }}
               {{- else }}
-              serviceName: {{ $fullName }}
-              servicePort: {{ $svcPort.port | quote }}
+              serviceName: {{ .backend.service.name | default $fullName }}
+              servicePort: {{ .backend.service.port.number | default $svcPort.port | quote }}
               {{- end }}
           {{- end }}
     {{- end }}
