fix: Use dig function for ingress backend service configuration

--- a/charts/deployment/templates/ingress-grpc.yaml
+++ b/charts/deployment/templates/ingress-grpc.yaml
@@ -119,12 +119,12 @@ spec:
             backend:
               {{- if semverCompare ">=1.19-0" $.Capabilities.KubeVersion.GitVersion }}
               service:
-                name: {{ .backend.service.name | default $fullName }}
+                name: {{ dig "backend" "service" "name" $fullName . }}
                 port:
-                  number: {{ .backend.service.port.number | default $svcPort.port }}
+                  number: {{ dig "backend" "service" "port" "number" $svcPort.port . }}
               {{- else }}
-              serviceName: {{ .backend.service.name | default $fullName }}
-              servicePort: {{ .backend.service.port.number | default $svcPort.port | quote }}
+              serviceName: {{ dig "backend" "service" "name" $fullName . }}
+              servicePort: {{ dig "backend" "service" "port" "number" $svcPort.port . | quote }}
               {{- end }}
           {{- end }}
     {{- end }}
